# dotfiles

./: .Xinitrc  .functions  .gitconfig  .gitignore  .gitmodules  .vimrc  .yamllint  .zshrc  Dockerfile  LICENSE  Makefile  README.md  TODO.md  Xinitrc  Xresources  bashrc  color.h  compton.conf  config  debug.h  fprog.c  gitset.sh  gtkrc-2.0  hadoop_installatin.sh  init.vim  install  install.conf.yaml  install_centos7.conf.yaml  install_manjaro.conf.yaml  install_ubuntu.conf.yaml  mc.keymap  octoset.sh  post-installation.sh  read.c  redshift.conf  rubyset.sh  str_utils.c  str_utils.h  tmux.conf  tplink-ac600-driver.sh  (+5 more)
.i3/: config  i3status.conf
config/: Xresources  alacritty.yml  compton.conf  conkyrc  gdbinit  gtkrc-2.0  pam_environment  taskrc  tmux.conf  vimrc  wireshark_coloring.rules  xinitrc  zshrc
fonts/: .uuid  OFL.txt
git/: gitconfig  gitconfig_delta  gitconfig_delta_themes  gitignore
i3/: conf.ini  config  i3status.conf  i3status.py  i3status_wrapper.py
install.d/: centos7.conf.yaml  common.conf.yaml  linux.conf.yaml  macos.conf.yaml  manjaro.conf.yaml  post.conf.yaml  ubuntu.conf.yaml
manjaro-config/: redshift.conf
music/: Makefile
nvim/: init.vim
stardict/: Makefile  TODO  stardict-freedict-eng-tur-2.4.2.tar.bz2
tests/: verify_install.sh
user_specific/: .logs.sh  bash_aliases  bash_functions  bash_functions_internal  bash_gen_functions  bash_template.sh  bashmarks.sh  c.snippets  centos7_tools.sh  coc-dep.sh  common_tools.sh  exports  keychron-fn-fix.sh  macos_tools.sh  os.sh  (+9 more)
wizard/: Cargo.toml
wizard/src/: main.rs  manifest.rs  ui.rs
(+53 files in other folders)
